<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graphite_90"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <!-- Period tabs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing_md"
        android:paddingVertical="@dimen/spacing_sm">

        <TextView
            android:id="@+id/tvTabToday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/history_today"
            android:textSize="@dimen/text_body"
            android:paddingVertical="6dp"
            android:background="@color/graphite_50"
            android:textColor="@color/copper_signal" />

        <TextView
            android:id="@+id/tvTabWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/history_week"
            android:textSize="@dimen/text_body"
            android:paddingVertical="6dp"
            android:textColor="@color/steel_40" />

        <TextView
            android:id="@+id/tvTabMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/history_month"
            android:textSize="@dimen/text_body"
            android:paddingVertical="6dp"
            android:textColor="@color/steel_40" />
    </LinearLayout>

    <!-- Custom Canvas chart -->
    <com.allmightgamebooster.gusdev.ui.history.SessionChartView
        android:id="@+id/chartSessions"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginHorizontal="@dimen/spacing_md" />

    <!-- Session list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSessions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="@dimen/spacing_sm" />
</LinearLayout>
